services/eks/externalDNS/externalDNSPod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: kube-system
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
       app: external-dns
    spec:
      serviceAccountName: lab2-serviceaccount #サービスアカウント名
      containers:
        - name: external-dns
          image: registry.opensource.zalan.do/teapot/external-dns:latest
          args:
            - --source=service
            - --source=ingress
            - --domain-filter=ahaws.toyota-bibliotheca.com #ホストゾーン名
            - --provider=aws
            - --policy=upsert-only # would prevent ExternalDNS from deleting any records, omit to enable full synchronization
            - --aws-zone-type=public # only look at public hosted zones (valid values are public, private or no value for both)
            - --registry=txt
            - --txt-owner-id=Z0411597H5KRPY5U2CQM #ホストゾーンID
