services/eks/externalDNS/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: lab2-namespace-1
  name: lab2-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/security-groups: <セキュリティグループ名>
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:608728620263:certificate/01d74d01-53fc-4e39-b295-88cba7b95810 #ACM証明書のarn
spec:
  ingressClassName: alb
  rules:
    - host: lab2.ahaws.toyota-bibliotheca.com #レコード名
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: lab2-service
              port:
                number: 80
